# DualSlides

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fade.rs  fullscreen_detect.rs  hotkey.rs  lib.rs  monitor.rs  profiles.rs  schedule.rs  slideshow.rs  taskbar.rs  tray.rs  window_mover.rs  zen_mode.rs
src/components/: FaqModal.tsx  HotkeyInput.tsx  MonitorCard.tsx  MonitorLayout.tsx  MonitorSource.tsx  ProBadge.tsx  ProUpgradeModal.tsx  ScheduleModal.tsx  Settings.tsx  Toast.tsx
src/hooks/: useHotkeys.ts  useMonitorConfig.ts  useMonitors.ts  usePro.ts  useSlideshow.ts  useTheme.ts
src/lib/: commands.ts  i18n.ts  layout.ts
src/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  zh.json
